# kasima

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  docker-compose.yml
conf/: clearml.conf  dataset=cifar10,model=resnet18.yaml
morphogenetic-kasmina/: .gitignore  README.md  requirements-dev.txt  requirements.txt
morphogenetic-kasmina/scripts/: run_experiment.py
morphogenetic-kasmina/src/morphogenetic_engine/: components.py  core.py
scripts/: run_experiment.py
src/: kaslog.py
src/kasima/: __init__.py
src/kasima/data/: cifar.py
src/kasima/models/: resnet.py
src/morphogenetic_engine/: __init__.py  components.py  core.py  metrics.py
tests/: test_cifar.py  test_clearml.py  test_components.py  test_core.py  test_log.py  test_run_experiment.py
