[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kasima"
version = "0.1.0"
description = "Morphogenetic Architecture experiment"
authors = [{name="Kasima", email="kasima@example.com"}]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
